<resources>
    <string name="app_name">TV Program</string>
    <string name="tab_now">Now</string>
    <string name="title_tvchannels">Channels...</string>
    <string name="tab_search">Search</string>
    <string name="tab_favorites">Favorites</string>
    <string name="title_exit">Exit</string>
    <string name="title_settings">Settings...</string>
    <string name="title_about">About...</string>
    <string name="title_update_program">Update program</string>
    <string name="title_tvchannels_win">Channels</string>
    <string name="tab_all">All</string>
    <string name="title_about_win">About</string>
    <string name="title_settings_win">Settings</string>
    <string name="empty_list">List Is Empty</string>
    <string name="lab_countday">Count day</string>
    <string name="set_sep_main">Main</string>
    <string name="lang_rus">Russian</string>
    <string name="lang_ukr">Ukrainian</string>
    <string name="lang_all">All</string>
    <string name="title_tvchannel_win">Channel</string>
    <string name="cat_all">All Category</string>
    <string name="not_found">Nothing found</string>
    <string name="search_hint">Search in titles and descriptions</string>
    <string name="channel_progress_msg">Update channels, please wait.</string>
    <string name="title_update_channels">Update channels</string>
    <string name="prg_update_caption">Update</string>
    <string name="bt_yes">Yes</string>
    <string name="bt_no">No</string>
    <string name="program_not_date">Program for %1$s not found, update ?</string>
    <string name="program_progress_msg">Update program, please wait.</string>
    <string name="program_progress_msg1">Receive program for channel\n%1$s by %2$s</string>
    <string name="program_progress_msg2">Save program in Database</string>
    <string name="update_channel">Update channel \n%1$s</string>
    <string name="dutation_txt">Dutation %1$s</string>
    <string name="title_tvprogram_det_win">Description</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="img_tvicon_desc">TV Icon channel</string>
    <string name="img_favorite_desc">Favorite icon channel</string>
    <string name="img_program_desc">Image for program</string>
    <string name="img_program_category_desc">Category program</string>
    <string name="img_favorite_program_desc">Favorite icon program</string>
    <string name="lab_channel">Channel:</string>
    <string name="lab_genres">Genre:</string>
    <string name="lab_country">Country:</string>
    <string name="lab_year">Year:</string>
    <string name="del_from_favorites">Del From Favorites</string>
    <string name="text_author">Voronov Nikolay</string>
    <string name="text_author_email">nkvoronov@gmail.com</string>
    <string name="lab_fulldesc">Use Full Description</string>
    <string name="txt_details">More details</string>
    <string name="clear_data_db">Clear Data Base</string>
    <string name="program_not_favorites">Favorites channels not found, select ?</string>
    <string name="cat_cartoons">Cartoon</string>
    <string name="cat_cognitive">Cognitive</string>
    <string name="cat_movie">Movie</string>
    <string name="cat_news">News</string>
    <string name="cat_show">Show</string>
    <string name="cat_sport">Sport</string>
    <string name="cat_tvshow">TV Show</string>
    <string name="lab_actors">Actors:</string>
    <string name="lab_title">Title:</string>
    <string name="lab_rating">Rating:</string>
    <string name="lab_directors">Director(s):</string>
</resources>
