<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/text_author_email"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/text_name_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/text_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_author"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_author_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_author_email"
        android:textSize="18sp" />

</LinearLayout>