<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="2dp"
    android:background="@drawable/rectangle"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/channel_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/img_tvicon_desc"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/rectangle_control" />

        <TextView
            android:id="@+id/channel_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/title_tvchannels_win"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/channel_favorites"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/img_favorite_desc"
            app:srcCompat="@drawable/rectangle" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_fav"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:contentDescription="@string/img_favorite_program_desc"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/favorites_on" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:layout_weight="3"
                android:padding="2dp"
                android:text="@string/title_tvchannels_win" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="00:00"
                android:textColor="#C62828"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_weight="3"
                android:text="@string/dutation_txt"
                android:textColor="#1565C0"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/image_category"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/img_program_category_desc"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/category_movie" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>